# netstat2-rs

./: .gitignore  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  cargo-linux.sh
.github/workflows/: ci.yml  release.yml
benches/: get_sockets_info_benchmark.rs
src/: lib.rs  utils.rs
src/integrations/: mod.rs  shared_api.rs
src/integrations/linux/: api.rs  filter.rs  mod.rs  netlink_iterator.rs  procfs.rs
src/integrations/linux/ext/: tcp_state_ext.rs
src/integrations/linux/ffi/: enums.rs  macros.rs  mod.rs  structs.rs  types.rs
src/integrations/osx/: api.rs  mod.rs  netstat.rs  sysctl.rs
src/integrations/osx/ext/: mod.rs  tcp_state_ext.rs
src/integrations/osx/ffi/: consts.rs  enums.rs  kern.rs  libproc.rs  macros.rs  mod.rs  structs.rs  types.rs
src/integrations/windows/: api.rs  mod.rs  socket_table.rs  socket_table_extended.rs  socket_table_iterator.rs
src/integrations/windows/ext/: tcp_state_ext.rs
src/integrations/windows/ffi/: enums.rs  iphlpapi.rs  mod.rs  structs.rs  types.rs
src/types/: address_family.rs  error.rs  mod.rs  protocol.rs  socket_info.rs  tcp_state.rs
