[package]
name = "netstat2"
version = "0.9.1"
authors = ["Ohad Ravid <ohad.rv@gmail.com>", "ivxvm <ivxvm@protonmail.com>"]
rust-version = "1.70.0"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ohadravid/netstat2-rs"
documentation = "https://docs.rs/netstat2"
categories = ["network-programming", "os"]
keywords = ["network", "socket"]
description = """
Cross-platform library to retrieve network sockets information.
"""

[dependencies]
libc = "0.2"
bitflags = "1.0"
thiserror = "1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
num-derive = "0.3"
num-traits = "0.2.8"
byteorder = "1.3.2"
