[package]
name = "netstat2"
version = "0.11.0"
authors = ["Ohad Ravid <ohad.rv@gmail.com>", "ivxvm <ivxvm@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ohadravid/netstat2-rs"
documentation = "https://docs.rs/netstat2"
categories = ["network-programming", "os"]
keywords = ["network", "socket"]
description = """
Cross-platform library to retrieve network sockets information.
"""

[dependencies]
bitflags = "2"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.4" }

[[bench]]
name = "get_sockets_info_benchmark"
harness = false

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "linux", target_os = "android"))'.build-dependencies]
bindgen = "0.65"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
num-derive = "0.3"
num-traits = "0.2.8"
byteorder = "1.3.2"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
netlink-sys = "0.8"
netlink-packet-core = "0.7"
netlink-packet-utils = "0.5"
netlink-packet-sock-diag = "0.4"